<resources>
    <string name="app_name">Study</string>
    <string name="bye">Press and DIcE !</string>
    <string name="button_text">go to hell</string>
    <string name="hello">Welcome to Nightmare Party!</string>
    <string name="text_size">55sp</string>
    <string name="damn_text_1">Hey U!</string>
    <string name="damn_text_2" />
    <string name="damn_text_3" />
    <string name="left_button">Pain</string>
    <string name="right_button">Random</string>
    <string name="count_String">0</string>
    <string name="midGhost_button_text">midGhost_button</string>
    <string name="right_btn_header_text">It\'s your &#160;&#160;&#160;&#160; number</string>
    <string name="pumpkin_btn_text">pumpkinButton</string>
    <string name="rightGhost_btn_text">rightGhostButton</string>
    <string name="leftGhost_btn_text">left Ghost Button</string>>
    <string name="setup_title_text">Enter Your Name</string>
    <string name="label1">Player 1</string>
    <string name="label2">Player 2</string>
    <string name="submit_btn">Submit</string>
    <string name="name_hint1">Spooky ghost</string>
    <string name="name_hint2">Lovely ghoul</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_text">Tic Tac Toe</string>
    <string name="a1_description">first cell of first row</string>
    <string name="a2_description">second cell of first row</string>
    <string name="a3_description">third cell of first row</string>
    <string name="b1_description">first cell of second row</string>
    <string name="b2_description">second cell of second row</string>
    <string name="b3_description">third cell of second row</string>
    <string name="c1_description">first cell of third row</string>
    <string name="c2_description">second cell of third row</string>
    <string name="c3_description">third cell of third row</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exit_btn">i\'m go out</string>
    <string name="funny_cats">Funny cats</string>
    <string name="banner_image_description">banner image</string>
</resources>