<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/halloween"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/navZone_textColor"
        android:shadowColor="@color/navZone_shadowColor"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/hello"
        android:textSize="23sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/hell_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_text">

        <TextView
            android:id="@+id/damn_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:shadowColor="@color/damn_shadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="25"
            android:text="@string/damn_text_1"
            android:textColor="@color/damn_textColor"
            android:textStyle="bold"
            android:textSize="55sp"/>

        <TextView
            android:id="@+id/damn_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:shadowColor="@color/damn_shadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="25"
            android:text="@string/damn_text_2"
            android:textColor="@color/damn_textColor"
            android:textStyle="bold"
            android:textSize="55sp"/>

        <TextView
            android:id="@+id/damn_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:shadowColor="@color/damn_shadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="25"
            android:text="@string/damn_text_3"
            android:textColor="@color/damn_textColor"
            android:textStyle="bold"
            android:textSize="55sp"/>


    </LinearLayout>


    <Button
        android:id="@+id/hell_button"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:text="@string/button_text"
        app:layout_constraintBottom_toTopOf="@id/bye_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello_text"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:id="@+id/bye_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/navZone_textColor"
        android:shadowColor="@color/navZone_shadowColor"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/bye"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>