<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ghost"
    android:scaleType="fitXY"
    tools:context=".rightButtonActivity">

    <TextView
        android:id="@+id/right_btn_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/right_btn_header_text"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:fontFamily="serif-monospace"
        android:rotation="3"
        android:rotationX="36"
        android:shadowColor="@color/navZone_shadowColor"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right_btn_header" />

    <Button
        android:id="@+id/midGhostBtn"
        style="@android:style/Widget.Button"
        android:layout_width="91dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:text="@string/midGhost_button_text"
        android:textSize="0sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <Button
        android:id="@+id/leftGhostBtn"
        style="@android:style/Widget.Button"
        android:layout_width="89dp"
        android:layout_height="205dp"
        android:background="#00FFFFFF"
        android:text="@string/leftGhost_btn_text"
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right_btn_header"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/rightGhostBtn"
        style="@android:style/Widget.Button"
        android:layout_width="101dp"
        android:layout_height="217dp"
        android:background="#00FFFFFF"
        android:text="@string/rightGhost_btn_text"
        android:textSize="0sp"
        app:layout_constraintBottom_toTopOf="@+id/pumpkinBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/right_btn_header"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/pumpkinBtn"
        style="@android:style/Widget.Button"
        android:layout_width="194dp"
        android:layout_height="234dp"
        android:background="#00FFFFFF"
        android:text="@string/pumpkin_btn_text"
        android:textSize="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>